# shuttlings-cch24

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
migrations/: 0001_init.sql
src/: day1.rs  day12.rs  day16.rs  day19.rs  day2.rs  day23.rs  day5.rs  day9.rs  main.rs
templates/: checksum.html  ornament.html  present.html
