[package]
name = "shuttlings-cch24"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
axum = "0.7.4"
cargo-manifest = "0.17.0"
jwt-simple = "0.12.11"
leaky-bucket = "1.1.2"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
shuttle-axum = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.8.2", features = ["uuid", "chrono"] }
tokio = { version = "1.28.2", features = ["time"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs"] }
